????/??/?? I/O System Refactor
  - Refactored OS loop so libevent and windows loop can be interchanged.
    + BUG: Does not offer a 404.
    + BUG: Appears to be closing before writing.
    + BUG: Listeners not closing at shutdown.
  + Ensured os-connections can be supplied to connection primitives.
  + Removed mention of sys/filesystem and sys/regex from modules.
  + Modified zero byte reads to properly close I/O.
  + BUG: Crashes after loading test/http-server two or three in a row.
    + Is there a GC problem with queues?
    + Does this happen with GC trace and free off? (bloat-mode)
    + Does this happen with GC free off? (leak-mode)
  
????/??/?? Process System Cleanup and Improvement
  - Added set-current-input! primitive.
  - Added set-current-output! primitive.
  - Added set-process-input! primitive.
  - Added set-process-output! primitive.
  - Added process-input primitive.
  - Added process-output primitive.
  - Renamed active-process to current-process.
  - Restored lib/tcp-server from Mosquito.
  - Modified lib/tcp-server to pass ancilliary arguments, much like spawn.
  - Restored lib/http-server from Mosquito.
  - Restored lib/http-file-server from Mosquito.
  t Modified dir-files to work under Windows.

2008/08/01 Timeout System Improvements
  - Generalized timeouts to tasks
  - Modified timeout primitive to create a task with the timeout method.
  - Modified pause primitive to accept an optional timeout in milliseconds.
  - Backported to WIN32, Isolating LibEvent Calls
  - Note, moved all subsystems back into the core vm; need to explore better
    ways to export symbols to DLLs than using the all-in-one-dll method.
  - WaspC works, Wasp doesn't, as expected.
  - BUG: (pause 100) at REPL causes halt.
  - Restored lib/url from Mosquito.
  - Restored lib/http-url from Mosquito.

2008/07/28 LibEvent Restoration
  - Restored event loop from future.
  - Modified core/io module to handle os-connection outputs and inputs.