@@ -3,6 +3,7 @@
     + BUG: Does not offer a 404.
     + BUG: Appears to be closing before writing.
     + BUG: Listeners not closing at shutdown.
+  - Removed raw-input, raw-output and channel types as they are unused.
   + Ensured os-connections can be supplied to connection primitives.
   + Removed mention of sys/filesystem and sys/regex from modules.
   + Modified zero byte reads to properly close I/O.
